kubernetes-networks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/server-snippets: |     # разрешен доступ только с http://homework.otus/index.html, который редиректит на http://homework.otus/homepage (по заданию)
      location ~* "^/index.html" {  
        allow all;
      }
      location / {
        deny all;
      }
    nginx.ingress.kubernetes.io/rewrite-target: /homepage
spec:
  rules:
    - host: homework.otus
      http:
        paths:
          - path: /index.html
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-server-service
                port:
                  number: 80
